--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Los Angeles</h1>
-    <img src="./video-Los-Angeles.jpg" alt="this is a Los Angeles city">
+    <img src="./video-Los-Angeles.jpg" alt="this is a Los Angeles City">
     <p><b>Los Angeles</b>officially the <b>City of Los Angeles</b>and often abbreviated as L.A., is the largest city in California. With an 
         estimated population of nearly four million people,[17] it is the second most populous city in the United States (after New York City) 
         and the third most populous city in North America (after Mexico City and New York City). Los Angeles is known for its Mediterranean 
