My second lab work

--- a/index.html
+++ b/index.html
@@ -4,21 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LosAngeles</title>
+    <title>HTML Forms</title>
 </head>
 <body>
-    <h1>Los Angeles</h1>
-    <img src="./Los_Angeles.jpg" alt="this is a Los Angeles City">
-    <p><b>Los Angeles</b>officially the <b>City of Los Angeles</b>and often abbreviated as L.A., is the largest city in California. With an 
-        estimated population of nearly four million people,[17] it is the second most populous city in the United States (after New York City) 
-        and the third most populous city in North America (after Mexico City and New York City). Los Angeles is known for its Mediterranean 
-        climate, ethnic diversity, Hollywood entertainment industry, and its sprawling metropolis.
+    <p>Name 
+        <input type="text" placeholder="Your name">
     </p>
-    <iframe src="https://en.wikipedia.org/wiki/Los_Angeles" width="1100px" height="500px"></iframe>
-    <ul>
-        <li>New Yourk</li>
-        <li>Chicago</li>
-        <li>San Francisco</li>
-    </ul>
+    <p>Do you like it 
+        <input type="checkbox" checked>
+    </p>
+    <p>
+        <input type="button" value="send">
+    </p>
+    <p>
+        <input type="file">
+    </p>
+    <p>
+        <input type="password">
+    </p>
+    <p>
+        <label for="radio1">Cabbege</label>
+        <input type="radio">
+    </p>
+    <p>
+        <label for="radio1">Carrot</label>
+        <input type="radio">
+    </p>
+    <p>
+        <label for="radio1">Cabbege</label>
+        <input type="radio">
+        <label for="radio1">Carrot</label>
+        <input type="radio">
+        <label for="radio1">Onion</label>
+        <input type="radio">
+    </p>
+    <p>
+        <input type="submit" value="reset">
+    </p>
+    <p>
+        <textarea name="" id="" cols="100" rows="10" minlength="19"></textarea>
+    </p>
+    <select name="" id="">
+        <option value="">Option1</option>
+        <option value="">Option2</option>
+        <option value="">Option3</option>
+    </select>
 </body>
 </html>
