Learning about forms

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>Name 
-        <input type="text" placeholder="Your name">
+        <input type="text" placeholder="Your name" value="Alex">
     </p>
     <p>Do you like it 
         <input type="checkbox" checked>
@@ -49,5 +49,29 @@
         <option value="">Option2</option>
         <option value="">Option3</option>
     </select>
+    <p>
+        <input type="color" value="#ffffff">
+    </p>
+    <p>
+        <input type="number" value="0" min="0" max="100">
+    </p>
+    <p>
+        <input type="range">
+    </p>
+    <p>
+        <input type="date">
+    </p>
+    <p>
+        <input type="search">
+    </p>
+    <form>
+        <fieldset>
+            <legend>Вход на сайт</legend>
+            <p>Логин: <input type="text" placeholder="login"></p>
+            <p>Пароль: <input type="password" placeholder="password"></p>
+            <p><input type="submit" value="Вход"></p>
+        </fieldset>
+    </form>
 </body>
 </html>
+
