--- a/index.html
+++ b/index.html
@@ -4,74 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Forms</title>
+    <title>LabWork1.3.4.1</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <p>Name 
-        <input type="text" placeholder="Your name" value="Alex">
-    </p>
-    <p>Do you like it 
-        <input type="checkbox" checked>
-    </p>
-    <p>
-        <input type="button" value="send">
-    </p>
-    <p>
-        <input type="file">
-    </p>
-    <p>
-        <input type="password">
-    </p>
-    <p>
-        <label for="radio1">Cabbege</label>
-        <input type="radio">
-    </p>
-    <p>
-        <label for="radio1">Carrot</label>
-        <input type="radio">
-    </p>
-    <p>
-        <label for="radio1">Cabbege</label>
-        <input type="radio">
-        <label for="radio1">Carrot</label>
-        <input type="radio">
-        <label for="radio1">Onion</label>
-        <input type="radio">
-    </p>
-    <p>
-        <input type="submit" value="reset">
-    </p>
-    <p>
-        <textarea name="" id="" cols="100" rows="10" minlength="19"></textarea>
-    </p>
-    <select name="" id="">
-        <option value="">Option1</option>
-        <option value="">Option2</option>
-        <option value="">Option3</option>
-    </select>
-    <p>
-        <input type="color" value="#ffffff">
-    </p>
-    <p>
-        <input type="number" value="0" min="0" max="100">
-    </p>
-    <p>
-        <input type="range">
-    </p>
-    <p>
-        <input type="date">
-    </p>
-    <p>
-        <input type="search">
-    </p>
-    <form>
-        <fieldset>
-            <legend>Вход на сайт</legend>
-            <p>Логин: <input type="text" placeholder="login"></p>
-            <p>Пароль: <input type="password" placeholder="password"></p>
-            <p><input type="submit" value="Вход"></p>
-        </fieldset>
-    </form>
+    <div class="header">
+        <input type="button" value="Log in">
+        <input type="button" value="Sign up">
+        <input type="button" value="About us">
+    </div>
+    <div class="info">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab expedita voluptates, nobis nihil consequatur quia vero quos? 
+           Itaque quaerat vel nobis praesentium, recusandae harum nesciunt eaque magni laboriosam dolor velit.
+            <button>Read more...</button>
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab expedita voluptates, nobis nihil consequatur quia vero quos? 
+           Itaque quaerat vel nobis praesentium, recusandae harum nesciunt eaque magni laboriosam dolor velit.
+            <button>Read more...</button>
+        </p>
+        <button>Subscribe for news</button>
+    </div>
+    <div class="footer">
+            <input type="button" value="Privacy">
+            <input type="button" value="Contacts">
+            <input type="button" value="Our team">
+    </div>
 </body>
 </html>
 
