--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LabWork1.3.4.1</title>
+    <title>LabWork_1.3.5</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <div class="header">
-        <input type="button" value="Log in">
-        <input type="button" value="Sign up">
-        <input type="button" value="About us">
+        <button class="but1">
+            <p id="logIn">Log In</p>
+        </button>
+        <button class="but2">
+            <p id="signUp">Sign up</p>
+        </button>
     </div>
-    <div class="info">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab expedita voluptates, nobis nihil consequatur quia vero quos? 
-           Itaque quaerat vel nobis praesentium, recusandae harum nesciunt eaque magni laboriosam dolor velit.
-            <button>Read more...</button>
-        </p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab expedita voluptates, nobis nihil consequatur quia vero quos? 
-           Itaque quaerat vel nobis praesentium, recusandae harum nesciunt eaque magni laboriosam dolor velit.
-            <button>Read more...</button>
-        </p>
-        <button>Subscribe for news</button>
+    <div class="sidebar">
+        <button class="ult">
+            <p id="ult">Buy ultimate package</p>
+        </button>
+        <button class="stand">
+            <p id="stand">Buy standart package</p>
+        </button>
     </div>
-    <div class="footer">
-            <input type="button" value="Privacy">
-            <input type="button" value="Contacts">
-            <input type="button" value="Our team">
+    <div class="lab">
+        <a href="grad.html">
+            <img src="icon/right-arrow.png" alt="" class="href">
+        </a>
     </div>
+    
 </body>
 </html>
-
