--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LabWork_1.3.5</title>
+    <title>LabWork_1.3.6</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
@@ -25,9 +25,8 @@
         </button>
     </div>
     <div class="lab">
-        <a href="grad.html">
-            <img src="icon/right-arrow.png" alt="" class="href">
-        </a>
+        <a href="grad.html" id="href1">LabWork1.3.7</a>
+        <a href="lab_1.3.8.html" id="href2">LabWork1.3.8</a>
     </div>
     
 </body>
