--- a/index.html
+++ b/index.html
@@ -4,92 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LabWork1.3.9</title>
-    <link rel="stylesheet" href="style.css">
+    <title>OOCSS</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <div class="nav">
-                <button class="nav1">Services</button>
-                <button class="nav2">Events</button>
-                <button class="nav3">Sign In</button>
-            </div>
+    <div class="header">
+        <button class="header-item">STORE</button>
+        <button class="header-item">CONTACTS</button>
+        <button class="header-item">ABOUT US</button>
+    </div>
+    <div class="page">
+        <div class="left-nav">
+            <button class="nav-but">WRITE US</button>
+            <button class="nav-but">CALL US</button>
+            <button class="nav-but">VISIT US</button>
         </div>
-        <div class="content">
-            <h2>Events</h2>
-            <div class="cont-item-1">
-                <div class="p-1">
-                    <p>Description</p>
-                </div>
-                <div class="p-2">
-                    <p>Date</p>
-                </div>
-                <div class="p-3">
-                    <p>Price</p>
-                </div>
-            </div>
-            <div class="cont-item-2">
-                <div class="p-1">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, deleniti pariatur error dolorem cumque assumenda
-                        repudiandae officiis veritatis distinctio sit enim hic incidunt perspiciatis ipsum minus, quis consectetur reiciendis 
-                        omnis, modi aut accusamus? Pariatur accusamus in sint, cum recusandae inventore quisquam eveniet repudiandae eum 
-                        maiores esse vero aspernatur distinctio quaerat incidunt, quod natus. Quasi, ut sit numquam odio sunt aliquam amet 
-                        dolore esse quis asperiores nisi excepturi libero dolorem mollitia.
-                    </p>
-                </div>
-                <div class="p-2">
-                    <p>15.09.2016</p>
-                </div>
-                <div class="p-3">
-                    <p>57$</p>
-                </div>
-            </div>
-            <div class="cont-item-3">
-                <div class="p-1">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, deleniti pariatur error dolorem cumque assumenda
-                        repudiandae officiis veritatis distinctio sit enim hic incidunt perspiciatis ipsum minus, quis consectetur reiciendis 
-                        omnis, modi aut accusamus? Pariatur accusamus in sint, cum recusandae inventore quisquam eveniet repudiandae eum 
-                        maiores esse vero aspernatur distinctio quaerat incidunt, quod natus. Quasi, ut sit numquam odio sunt aliquam amet 
-                        dolore esse quis asperiores nisi excepturi libero dolorem mollitia.
-                    </p>
-                </div>
-                <div class="p-2">
-                    <p>15.09.2016</p>
-                </div>
-                <div class="p-2">
-                    <p>57$</p>
-                </div>
-            </div>
-            <h2>Jobs</h2>
-            <div class="cont-item-4">
-                <div class="jobs">
-                    <p>Developer</p>
-                </div>
-                <div class="text">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, deleniti pariatur error dolorem cumque assumenda
-                        repudiandae officiis veritatis distinctio sit enim hic incidunt perspiciatis ipsum minus, quis consectetur reiciendis 
-                        omnis, modi aut accusamus? Pariatur accusamus in sint, cum recusandae inventore quisquam eveniet repudiandae eum 
-                        maiores esse vero aspernatur distinctio quaerat incidunt, quod natus. Quasi, ut sit numquam odio sunt aliquam amet 
-                        dolore esse quis asperiores nisi excepturi libero dolorem mollitia.
-                    </p>
-                </div>
-            </div>
-            <div class="cont-item-5">
-                <div class="jobs">
-                    <p>Developer</p>
-                </div>
-                <div class="text">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, deleniti pariatur error dolorem cumque assumenda
-                        repudiandae officiis veritatis distinctio sit enim hic incidunt perspiciatis ipsum minus, quis consectetur reiciendis 
-                        omnis, modi aut accusamus? Pariatur accusamus in sint, cum recusandae inventore quisquam eveniet repudiandae eum 
-                        maiores esse vero aspernatur distinctio quaerat incidunt, quod natus. Quasi, ut sit numquam odio sunt aliquam amet 
-                        dolore esse quis asperiores nisi excepturi libero dolorem mollitia.
-                    </p>
-                </div>
-            </div>
+        <div class="info-text">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid, commodi eaque. Delectus exercitationem facere deleniti 
+               praesentium aspernatur, totam quisquam beatae nemo corrupti repudiandae sint, adipisci, dolores perspiciatis. Tempore earum 
+               veritatis fuga corporis, ipsum at magnam non quas reiciendis, voluptatem nobis rerum. Maiores sit tempore sint excepturi ipsa? 
+               Maiores, et possimus modi nulla sapiente enim dolorum velit atque deleniti non repudiandae doloremque dignissimos assumenda sint 
+               illo aut harum explicabo quos? Quam.
+            </p>
         </div>
     </div>
 </body>
