--- a/lab_works/LabWork1.3.7.html
+++ b/lab_works/LabWork1.3.7.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LabWork_1.3.7</title>
-    <link rel="stylesheet" href="style/style_grad.css">
+    <link rel="stylesheet" href="../style/style1.3.7.css">
 </head>
 <body>
     <div class="container">
