--- a/index.html
+++ b/index.html
@@ -1,32 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OOCSS</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Document</title>
 </head>
+
 <body>
-    <div class="header">
-        <button class="header-item">STORE</button>
-        <button class="header-item">CONTACTS</button>
-        <button class="header-item">ABOUT US</button>
-    </div>
-    <div class="page">
-        <div class="left-nav">
-            <button class="nav-but">WRITE US</button>
-            <button class="nav-but">CALL US</button>
-            <button class="nav-but">VISIT US</button>
-        </div>
-        <div class="info-text">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid, commodi eaque. Delectus exercitationem facere deleniti 
-               praesentium aspernatur, totam quisquam beatae nemo corrupti repudiandae sint, adipisci, dolores perspiciatis. Tempore earum 
-               veritatis fuga corporis, ipsum at magnam non quas reiciendis, voluptatem nobis rerum. Maiores sit tempore sint excepturi ipsa? 
-               Maiores, et possimus modi nulla sapiente enim dolorum velit atque deleniti non repudiandae doloremque dignissimos assumenda sint 
-               illo aut harum explicabo quos? Quam.
-            </p>
-        </div>
-    </div>
+
+    <script src="./index.js"></script>
 </body>
+
 </html>
